@@ -256,8 +256,6 @@
                                 e.g. "50ms".</para></listitem>
                         </varlistentry>
 
-                        <xi:include href="user-system-options.xml" xpointer="machine" />
-
                         <xi:include href="standard-options.xml" xpointer="help" />
                         <xi:include href="standard-options.xml" xpointer="version" />
                         <xi:include href="standard-options.xml" xpointer="no-pager" />
